# prompt-optimizer

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  temp.db
.github/: CONTRIBUTING.md
.github/workflows/: linkcheck.yml  lint.yml  release.yml  test.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/evaluations/: extending_evals.md  openai_evals.md
docs/extend/: custom_metrics.md  custom_optims.md
docs/getting_started/: cli.md  getting_started.md  installation.md  metrics.md
docs/theory/: cost_performance_tradeoff.md
evals/: LogiQAEval.py  OAIEvalManager.py  RCEval.py  compute_metric.py  make_artifacts.py  results.csv  utils.py
evals/results/: EntropyOptim.jsonl  RCEval.jsonl
evaluations/: README.md  compute_metric.py  eval.py  make_artifacts.py  make_errors.py  results.csv  tradeoff.py
evaluations/artifacts/: table.md
evaluations/logs/: Autocorrect_Optim.jsonl  Default.jsonl  Entropy_Optim_p_0.05.jsonl  Entropy_Optim_p_0.1.jsonl  Entropy_Optim_p_0.25.jsonl  Entropy_Optim_p_0.5.jsonl  Lemmatizer_Optim.jsonl  NameReplace_Optim.jsonl  Pulp_Optim_p_0.05.jsonl  Pulp_Optim_p_0.1.jsonl  Punctuation_Optim.jsonl  Stemmer_Optim.jsonl  SynonymReplace_Optim_p_1.0.jsonl
evaluations/results/: Autocorrect_Optim.jsonl  Default.jsonl  Entropy_Optim_p_0.05.jsonl  Entropy_Optim_p_0.1.jsonl  Entropy_Optim_p_0.25.jsonl  Entropy_Optim_p_0.5.jsonl  Lemmatizer_Optim.jsonl  NameReplace_Optim.jsonl  Pulp_Optim_p_0.05.jsonl  Pulp_Optim_p_0.1.jsonl  Punctuation_Optim.jsonl  Stemmer_Optim.jsonl  SynonymReplace_Optim_p_1.0.jsonl
evaluations/sample_logs/: generate_db.py
examples/: bertscore_metric.py  entropy_optimizer.py  json_support.py  langchain_support.py  protect_tags.py  sequential.py
examples/cli/: json_stopwordoptim.sh  string_stopwordoptim.sh
examples/cli/data/: example.jsonl
prompt_optimizer/: __init__.py
prompt_optimizer/cli/: main.py
prompt_optimizer/metric/: __init__.py  base.py  bertscore_metric.py  token_metric.py
prompt_optimizer/poptim/: __init__.py  autocorrect_optim.py  base.py  entropy_optim.py  lemmatizer_optim.py  logger.py  name_replace_optim.py  pulp_optim.py  punctuation_optim.py  sequential.py  stemmer_optim.py  stop_word_optim.py  synonym_replace_optim.py  utils.py
prompt_optimizer/visualize/: __init__.py  stringdiffer.py
prompt_optimizer/wrapper/: __init__.py  base.py  openai.py  sql_db.py
tests/unit_tests/: test_autocorrect_optim.py  test_entropy_optim.py  test_lemmatizer_optim.py  test_name_replace_optim.py  test_openai_wrapper.py  test_protected_tags.py  test_pulp_optim.py  test_punctuation_optim.py  test_sequential.py  test_sql_db.py  test_stop_word_optim.py  test_synonym_replace_optim.py  utils.py
tests/unit_tests/data/: prompt1.txt  prompt2.txt
