[tool.poetry]
name = "prompt-optimizer"
version = "0.1.0"
description = ""
authors = ["Vaibhav Kumar <34630911+TimeTraveller-San@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "prompt_optimizer"}]

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.27.4"
torch = "^2.0.0"
pulp = "^2.7.0"
nltk = "^3.8.1"
tiktoken = "^0.3.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
sphinx = "^6.1.3"
sphinx-book-theme = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.docs.dependencies]
autodoc_pydantic = "^1.8.0"
myst_parser = "^0.18.1"
nbsphinx = "^0.8.9"
sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
sphinx_book_theme = "^0.3.3"
sphinx_rtd_theme = "^1.0.0"
sphinx-typlog-theme = "^0.8.0"
sphinx-panels = "^0.6.0"
toml = "^0.10.2"
myst-nb = "^0.17.1"
linkchecker = "^10.2.1"
sphinx-copybutton = "^0.5.1"