[tool.poetry]
name = "prompt-optimizer"
version = "0.1.0"
description = ""
authors = ["Vaibhav Kumar <34630911+TimeTraveller-San@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "prompt_optimizer"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
transformers = "^4.27.4"
torch = "^2.0.0"
pulp = "^2.7.0"
nltk = "^3.8.1"
tiktoken = "^0.3.3"
autocorrect = "^2.6.1"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
line-length = 88
fixable = ["E"]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["notebooks"]

[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"
sphinx-book-theme = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
autodoc_pydantic = "^1.8.0"
nbsphinx = "^0.8.9"
sphinx-autobuild = "^2021.3.14"
sphinx_rtd_theme = "^1.0.0"
sphinx-typlog-theme = "^0.8.0"
toml = "^0.10.2"
linkchecker = "^10.2.1"
sphinx-copybutton = "^0.5.1"