[tool.poetry]
name = "prompt-optimizer"
version = "0.2.0"
description = ""
authors = ["Vaibhav Kumar <34630911+TimeTraveller-San@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "prompt_optimizer"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
transformers = "^4.27.4"
torch = "^2.0.0"
pulp = "^2.7.0"
nltk = "^3.8.1"
tiktoken = "^0.3.3"
autocorrect = "^2.6.1"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"
sphinx-book-theme = "^1.0.1"
ruff = "^0.0.261"
mypy = "^1.2.0"
pytest = "^7.3.0"
black = "^23.3.0"
langchain = "^0.0.173"
myst-parser = "^1.0.0"

[tool.poetry.group.docs.dependencies]
autodoc_pydantic = "^1.8.0"
nbsphinx = "^0.8.9"
sphinx-autobuild = "^2021.3.14"
sphinx_rtd_theme = "^1.0.0"
sphinx-typlog-theme = "^0.8.0"
toml = "^0.10.2"
linkchecker = "^10.2.1"
sphinx-copybutton = "^0.5.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"
duckdb-engine = "^0.7.0"
pytest-watcher = "^0.2.6"
freezegun = "^1.2.2"
responses = "^0.22.0"
pytest-asyncio = "^0.20.3"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
line-length = 88
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
ignore = ["E501"]


[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["notebooks"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"